@@ -28,7 +28,8 @@ class stage1_target(generic_stage_target):
 		"/usr/lib/python2.2/lib-tk", "/usr/lib/python2.3/test",\
 		"/usr/lib/python2.3/email", "/usr/lib/python2.3/lib-tk",\
 		"/usr/lib/python2.4/test", "/usr/lib/python2.4/email",\
-		"/usr/lib/python2.4/lib-tk", "/usr/share/zoneinfo"])
+		"/usr/lib/python2.4/lib-tk", "/usr/share/zoneinfo",\
+		"/etc/portage"])
 
 	# XXX: How do these override_foo() functions differ from the ones in generic_stage_target and why aren't they in stage3_target?
 
