@@ -1,6 +1,11 @@
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Id: $
 
+  25 Nov 2007; Andrew Gaffney <agaffney@gentoo.org>
+  modules/stage1_target.py, modules/stage2_target.py,
+  modules/stage3_target.py:
+  add /etc/portage to cleanables for stage 1-3
+
   17 Nov 2007; Andrew Gaffney <agaffney@gentoo.org>
   livecd/files/livecd-local.start,
   targets/livecd-stage2/livecd-stage2-controller.sh,
